# game-survival

./: Cargo.toml
assets/: grass_biome.tsx  map.tmx
src/: main.rs
src/objects/: mod.rs  player.rs  well.rs
