[package]
name = "survival"
version = "0.0.0"
edition = "2024"

[dependencies]
avian2d = "0.3"
bevy = { version = "0.16", default-features = true, features = [
    "dynamic_linking",
    "file_watcher",
] }
[dependencies.bevy_ecs_tiled]
version = "0.9"
# git = "https://github.com/adrien-bon/bevy_ecs_tiled.git"
# branch = "dev"
features = ["avian"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
